--- a/GitSync/GitSync/GitSync.csproj
+++ b/GitSync/GitSync/GitSync.csproj
@@ -1,12 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="GitHub" Version="1.13.2" />
-  </ItemGroup>
 
 </Project>
