--- a/GitSync/GitSync/GitSync.csproj
+++ b/GitSync/GitSync/GitSync.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.5.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="ShellProgressBar" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
